[package]
name = "ultimate-tick-tac-toe-count-moves"
version = "0.1.0"
authors = ["pcpthm"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.2.0"
derive_more = "0.15.0"
rayon = "1.2.0"
